# domain/legal_entity.go
@@ -13,3 +13,16 @@ type LegalEntity struct {
 	UpdatedAt time.Time  `json:"updated_at"`
 	DeletedAt *time.Time `json:"deleted_at,omitempty"`
 }
+
+type BankAccount struct {
+	ID            uuid.UUID `json:"id"`
+	LegalEntityID uuid.UUID `json:"legal_entity_id"`
+	BIK           string    `json:"bik"` // цифра
+	BankName      string    `json:"bank_name"`
+	Address       string    `json:"address"`
+
+	AccountNumber string    `json:"account_number"`
+	Currency      string    `json:"currency"`
+	Comment       string    `json:"comment"`
+	IsPrimary     bool      `json:"is_primary"`
+}
